Subsurface passes incorrectly created in .blend files from old Blender versions #93382

Closed
opened 2021-11-25 17:25:09 +01:00 by Michael Klein · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47

Blender Version
Broken version: 3.0.0 Beta, branch: master, commit date: 2021-11-24 23:03, hash: 8f2db94627
Worked: also not available in older versions

Short description of error
I just realized that the Subsurface passes Direct, Indirect and Color are missing in the ViewLayer Properties. They will be rendered default und you can't disable them.

It's not an error. Its a missing feature.

blender_EXn8ML7pBd.png

Exact steps for others to reproduce the error

  1. Open Blender 2.82 or older.
  2. Enabled the Subsurface scattering render passes in Cycles and save the file.
  3. Open that file in a newer version of Blender and render the scene. Notice you have drop downs for the various subsurface scattering passes you enabled.

Here is a file you can use for testing (download the file and skip steps 1 and 2):
#93382 - File with Subsurface Scattering Passes.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47 **Blender Version** Broken version: 3.0.0 Beta, branch: master, commit date: 2021-11-24 23:03, hash: `8f2db94627` Worked: also not available in older versions **Short description of error** I just realized that the Subsurface passes Direct, Indirect and Color are missing in the ViewLayer Properties. They will be rendered default und you can't disable them. It's not an error. Its a missing feature. ![blender_EXn8ML7pBd.png](https://archive.blender.org/developer/F12161646/blender_EXn8ML7pBd.png) **Exact steps for others to reproduce the error** 1. Open Blender 2.82 or older. 2. Enabled the Subsurface scattering render passes in Cycles and save the file. 3. Open that file in a newer version of Blender and render the scene. Notice you have drop downs for the various subsurface scattering passes you enabled. Here is a file you can use for testing (download the file and skip steps 1 and 2): [#93382 - File with Subsurface Scattering Passes.blend](https://archive.blender.org/developer/F12232478/T93382_-_File_with_Subsurface_Scattering_Passes.blend)
Author

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. The exact steps are as follows:

  1. Open Blender 2.82 or older.
  2. Enabled the Subsurface scattering render passes in Cycles and save the file.
  3. Open that file in a newer version of Blender and render the scene. Notice you have drop downs for the various subsurface scattering passes you enabled.

Here is a file you can use for testing:
#93382 - File with Subsurface Scattering Passes.blend

I can confirm. The exact steps are as follows: 1. Open Blender 2.82 or older. 2. Enabled the Subsurface scattering render passes in Cycles and save the file. 3. Open that file in a newer version of Blender and render the scene. Notice you have drop downs for the various subsurface scattering passes you enabled. Here is a file you can use for testing: [#93382 - File with Subsurface Scattering Passes.blend](https://archive.blender.org/developer/F12232478/T93382_-_File_with_Subsurface_Scattering_Passes.blend)
Brecht Van Lommel changed title from ViewLayer Properties > Passes > Light: Subsurface passes missing? to Subsurface passes incorrectly created in .blend files from old Blender versions 2021-12-09 18:24:17 +01:00
Lukas Stockner self-assigned this 2022-10-19 03:57:59 +02:00

This issue was referenced by 3411a96e74

This issue was referenced by 3411a96e74938afe9b7ffe64e61a225da5f2eb6a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93382
No description provided.